# langchain-demo

./: README.md  config.toml  config_loader.py  pyproject.toml
components/: chat_and_prompts.ipynb  classification.ipynb  semantic_search.ipynb
config/: config.toml  config_loader.py
orchestration/: agent.ipynb  chat_bot.ipynb  rag_part1.ipynb
