[project]
name = "langchain-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.3.6",
    "langchain>=0.3.21",
    "langchain-anthropic>=0.3.10",
    "langchain-community>=0.3.20",
    "langchain-core>=0.3.47",
    "langchain-google-genai>=2.1.1",
    "langchain-text-splitters>=0.3.7",
    "langgraph>=0.3.18",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "pypdf>=5.4.0",
    "tavily-python>=0.5.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "uv>=0.6.9",
]
